--- a/src/main/resources/templates/bookings.html
+++ b/src/main/resources/templates/bookings.html
@@ -6,8 +6,12 @@
 </head>
 <body>
 <h1>All Bookings</h1>
-<a th:href="@{/bookings/add}">Add New Booking</a>
-<table border="1">
+
+<!-- Add Booking Button -->
+<a th:href="@{/bookings/add}" class="btn-add">Add New Booking</a>
+
+<!-- Bookings Table -->
+<table>
     <thead>
     <tr>
         <th>ID</th>
@@ -22,10 +26,18 @@
     <tbody>
     <tr th:each="booking : ${bookings}">
         <td th:text="${booking.id}"></td>
-        <td th:text="${booking.bus.busName}"></td>
-        <td th:text="${booking.user.name}"></td>
+        <td th:text="${booking.bus != null ? booking.bus.busName : 'N/A'}"></td>
+        <td th:text="${booking.user != null ? booking.user.name : 'N/A'}"></td>
         <td th:text="${booking.seatsBooked}"></td>
-        <td th:text="${booking.bookingDate}"></td>
+        <td th:text="${#dates.format(booking.bookingDate, 'yyyy-MM-dd HH:mm')}"></td>
         <td th:text="${booking.status}"></td>
         <td>
-            <a th:href="@{/bookings/edit/{
+            <a th:href="@{/bookings/edit/{id}(id=${booking.id})}" class="btn-edit">Edit</a>
+            <a th:href="@{/bookings/delete/{id}(id=${booking.id})}" class="btn-delete"
+               onclick="return confirm('Are you sure you want to delete this booking?')">Delete</a>
+        </td>
+    </tr>
+    </tbody>
+</table>
+</body>
+</html>
